--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,7 @@
 
 <h1>CRUD NODEJS</h1>
 <a href='insert'>Insert</a><br>
-<a href='delete'>Delete</a><br>
 <a href='select'>Select</a><br>
-<a href='update'>Update</a><br>
+
+<h2>O AMOR DA MINHA VIDA É: </h2>
+<h1>VITÓRIA GIACHINI DE OLIVEIRA</h1> 
