--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 *{margin:0; padding:0; box-sizing: border-box;}
 
 h1{color: darkred; width:100%; text-align: center;}
+h2{color: black; width:100%; text-align: center;}
 
 a{color:#333;}
 
