--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,20 @@
 
 <h1>CRUD NODEJS</h1>
-<a href='insert'>Insert</a><br>
-<a href='select'>Select</a><br>
-
+<div style="margin: 0 auto; text-align: center;" >
+    {{!-- <a href='insert'>Insert</a><br> --}}
+    <a href="insert">
+        <button class="button"  name="insert" >Insert</button>
+    </a><br>
+    {{!-- <div class="space"></div> --}}
+    <a href="select">
+        <button class="button"  name="select" >Select</button>
+    </a><br>
+    {{!-- <a href='select'>Select</a><br> --}}
+</div>
+{{!-- <a href='insert'>Insert</a><br>
+<a href='select'>Select</a><br> --}}
+<br>
+<br>
+<br>
 <h2>O AMOR DA MINHA VIDA É: </h2>
 <h1>VITÓRIA GIACHINI DE OLIVEIRA</h1> 
