--- a/views/insert.handlebars
+++ b/views/insert.handlebars
@@ -2,5 +2,6 @@
     <input type='text' name='id' id='id' placeholder='Id:'><br>
     <input type='text' name='name' id='name' placeholder='Name:'><br>
     <input type='text' name='age' id='age' placeholder='Age:'><br>
+    <input type='text' name='city' id='city' placeholder='City:'><br>
     <input type='submit' name='btnSubmit' id='btnSubmit' value='Add'><br>
 </form>
