--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ a{color:#333; text-align: right;}
 
 .button {
     appearance: button;
-    background-color: #1899D6;
+    background-color: #0abab5;
     border: solid transparent;
     border-radius: 16px;
     border-width: 0 0 4px;
