--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,10 +2,10 @@
 <h1>CRUD NODEJS</h1>
 <div style="margin: 0 auto; text-align: center;" >
     <a href="insert">
-        <button class="button"  name="insert" >Insert</button>
+        <button class="button"  name="insert" >Inserir Usuário</button>
     </a><br>
     <a href="select">
-        <button class="button"  name="select" >Select</button>
+        <button class="button"  name="select" >Consultar Lista de Usuários</button>
     </a><br>
 </div>
 {{!-- <a href='insert'>Insert</a><br>
