--- a/views/insert.handlebars
+++ b/views/insert.handlebars
@@ -1,6 +1,11 @@
-<form name='form1' action='controllerForm' method='post'>
-    <input type='text' name='id' id='id' placeholder='Id:'><br>
-    <input type='text' name='name' id='name' placeholder='Name:'><br>
-    <input type='text' name='age' id='age' placeholder='Age:'><br>
-    <input type='submit' name='btnSubmit' id='btnSubmit' value='Add'><br>
-</form>
+<div style="margin: 20px; text-align: center;">
+    <form name='form1' action='controllerForm' method='post'>
+        <input type='text' class="fieldInput" name='id' id='id' placeholder='Id:'><br>
+        <input type='text' class="fieldInput" name='name' id='name' placeholder='Nome:'><br>
+        <input type='text' class="fieldInput" name='age' id='age' placeholder='Idade:'><br>
+        <input type='submit' class="submit" name='btnSubmit' id='btnSubmit' value='Adicionar'><br>
+    </form>
+    <a href="/">
+        <button class="button" name="back" >Menu Principal</button>
+    </a>
+</div>
