--- a/views/select.handlebars
+++ b/views/select.handlebars
@@ -18,3 +18,9 @@
         </tr>
     {{/data}}
 </table>
+
+<div style="margin: 10px; text-align: center;" >
+    <a href="/">
+        <button class="button" name="back" >Menu Principal</button>
+    </a>
+</div>
