--- a/views/controllerForm.handlebars
+++ b/views/controllerForm.handlebars
@@ -1,1 +1,7 @@
 <h1>Os dados de {{name}} foram inseridos!</h1>
+
+<div style="margin: 0 auto; text-align: center;" >
+    <a href="/">
+        <button class="button" name="back" >Menu Principal</button>
+    </a>
+</div>
