--- a/views/controllerUpdate.handlebars
+++ b/views/controllerUpdate.handlebars
@@ -1,1 +1,6 @@
 <h1>Dados atualizados com sucesso!</h1>
+<div style="margin: 0 auto; text-align: center;" >
+    <a href="/">
+        <button class="button" name="back" >Menu Principal</button>
+    </a>
+</div>
