--- a/views/delete.handlebars
+++ b/views/delete.handlebars
@@ -1,1 +1,7 @@
 <h1>Dado deletado com sucesso!</h1>
+
+<div style="margin: 0 auto; text-align: center;" >
+    <a href="/">
+        <button class="button" name="back">Menu Principal</button>
+    </a>
+</div>
